src/tp4/Expr.g4
grammar Expr;

prog: stat+ ;

stat: expr NEWLINE                  # printExpr
        | ID '=' expr NEWLINE       # assign
        | NEWLINE                   # blank
        ;
expr: expr (MUL | DIV) expr         # MulDiv
    | expr (ADD | SUB) expr         # AddSub
    | INT                           # int
    | ID                            # id
    | '(' expr ')'                  # parents
    ;

MUL : '*' ;
DIV : '/' ;
ADD : '+' ;
SUB : '-' ;
ID : [a-zA-Z]+ ;
INT : [0-9]+ ;
NEWLINE:'\r'? '\n' ;
WS : [ \t]+ -> skip ;
